# crop-seg-2

./: .gitignore  buildProductLevelVRT.sh  buildTemporalLevelVRT.sh  repackAll.sh  sentinelRepack.sh  sentinelRepackV2.sh
data-aquisition/: S2_TilingSystem2-1.txt  main.py  productquery.py  requirements.txt  tiling.py
model/: build.out  cdl.py  dice.py  out.txt  requirements.txt  train.py  unet.py
sample-map-gen/: .clangd  .editorconfig  CMakeLists.txt  main.cpp
sample-map-gen/cuda/: mapgen.cu  mapgen.h  maskJoin.cu  maskJoin.h
sampler/: .editorconfig  CMakeLists.txt  buildProductLevelVRT.sh  buildTemporalLevelVRT.sh  pyproject.toml
sampler/python/: bindings.cpp
sampler/python/satsamplepy/: __init__.py
sampler/sandbox/: main.cpp
sampler/src/: cdlCache.cpp  cdlCache.h  load.cpp  load.h  sampler.cpp  sampler.h
sampler/src/cpu/: mapgen.cpp  mapgen.h  percentile.cpp  percentile.h
sampler/src/cuda/: mapgen.cu  mapgen.h  maskJoin.cu  maskJoin.cuh  percentile.cu  percentile.h
sampler/test/: sampler.cpp
setBandDescriptions/: CMakeLists.txt  main.cpp
